blur rasgos seleccionados

--- a/src/assets/styles/components/Trait.scss
+++ b/src/assets/styles/components/Trait.scss
@@ -76,7 +76,8 @@
 .tooltip {
     position: relative;
     display: inline-block;
-  }
+    cursor: pointer;
+}
   
 /* Tooltip text */
 .tooltip .tooltiptext {
