--- a/src/assets/styles/components/Champion.scss
+++ b/src/assets/styles/components/Champion.scss
@@ -23,7 +23,21 @@
 .gray {
     filter: grayscale(100%);
 }
-
+.image img{
+    width: 100%;
+    height: 95%;
+}
+.pin {
+    width: 50px;
+    height: 20px;
+    cursor: pointer;
+}
+.blured {
+    filter: blur(2px)
+}
+.bluredgray {
+    filter: grayscale(100%) blur(2px);
+}
 @media (max-width: 720px) {
     .champion{
         font-size: 55%;
@@ -42,14 +56,4 @@
     .champion img{
         width: 28%;
     }
-}
-
-.image img{
-    width: 100%;
-    height: 95%;
-}
-.pin {
-    width: 50px;
-    height: 20px;
-    cursor: pointer;
 }
